# supermarket-checkout

./: CMakeLists.txt  README.md
cpp/: Checkout.cpp  Driver.cpp  StrategyB2G1.cpp  StrategyB3CF.cpp
data/: cart_items.txt  discount_categories.txt
headers/: Checkout.h  Common.h  IDiscountStrategy.h  Item.h  StrategyB2G1.h  StrategyB3CF.h
